[package]
name = "ygg"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]

[dependencies]
arrayvec = { version = "0.4", features = ["serde-1"] }
float-cmp = "0.4"
libc = "0.2"
log = "0.4"
noisy_float = { version = "0.1", features = ["serde-1"] }
serde = "1"
serde_derive = "1"

[dev-dependencies]
chrono = "0.4"
fern = "0.5"

[features]
default = []
web-default = []
